--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,34 +7,24 @@ on:
     branches: [ main ]
   release:
     types: [created]
-  workflow_dispatch: # 允许手动触发
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11']
-        exclude:
-          # 排除一些不兼容的组合
-          - os: macos-latest
-            python-version: '3.11'
+        os: [windows-latest, macos-latest]
+        python-version: ['3.13']
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        
-    - name: Install system dependencies (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y zip unzip
         
     - name: Install system dependencies (macOS)
       if: matrix.os == 'macos-latest'
@@ -64,7 +54,7 @@ jobs:
         python build_workflow.py
         
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: excel-image-extractor-${{ matrix.os }}-${{ matrix.python-version }}
         path: |
@@ -79,7 +69,7 @@ jobs:
     
     steps:
     - name: Download all artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         path: ./artifacts
         
@@ -94,7 +84,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: build
     
     steps:
@@ -102,9 +92,9 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: '3.13'
         
     - name: Install dependencies
       run: |
